# FCC

./: CMakeLists.txt  README.md  main.c
Functions/: AdjustQuadrant.c  AdjustTgt.c  ChargeFinder.c  CusaTan.c  DeflectionUpdate.c  IntegrationLoop.c  MaxRange.c  PrintAllSolutions.c  PrintSolutions.c  QuadrantUpdate.c  SheafSolve_Irregular.c  SheafSolve_Linear.c  SheafSolve_Open.c  SheafSolve_Rectangular.c  SheafSolver.c  SolutionSolver.c  VectorDir.c  VectorDistance.c  airDensity.c
Headers/: AdjustQuadrant.h  AdjustTgt.h  ChargeFinder.h  Conversions.h  CusaTan.h  DeflectionUpdate.h  IntegrationLoop.h  MaxRange.h  PrintAllSolutions.h  PrintSolutions.h  QuadrantUpdate.h  SheafSolve_Irregular.h  SheafSolve_Linear.h  SheafSolve_Open.h  SheafSolve_Rectangular.h  SheafSolver.h  SolutionSolver.h  VectorDir.h  VectorDistance.h  airDensity.h  mainInclude.h  structs.h
